--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,14 +17,14 @@ build:
 requirements:
   host:
     - pip
-    - python
+    - python >= 3.8
     - setuptools ==58.2.0
   run:
     - mmh3 >=3.0.0
     - numpy >=1.19
     - pandas >=1.3.0
     - plotly
-    - python
+    - python >= 3.8
     - scikit-learn >=1.0.0
     - scipy >=1.7.0
 
